# quantr

./: README.md  pyproject.toml
src/quantr/: __init__.py
src/quantr.egg-info/: PKG-INFO
